--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.4.5",
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.6",
     "es6-promise": "^4.2.4",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
