--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "es6-promise": "^4.2.4",
     "normalize.css": "^8.0.0",
