--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "expose-loader": "^0.7.5",
+    "imports-loader": "^0.8.0",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.5.2",
+    "snapsvg": "^0.5.1",
+    "tween.js": "^16.6.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
