--- a/.env.development.local
+++ b/.env.development.local
@@ -1,6 +1,5 @@
-VUE_APP_TITLE=My App
+VUE_APP_NAME=My App
 NODE_ENV=development
-BASE_URL=/
-VUE_APP_A=a
-ENV_CONFIG=dev
-BASE_API=https://api-dev
+ENV_CONFIG=development
+BASE_URL=/123456789
+VUE_APP_API=https://api-dev
