--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,5 @@
-VUE_APP_TITLE=My App
+VUE_APP_NAME=My App
 NODE_ENV=test
-BASE_URL=/
-VUE_APP_A=a
 ENV_CONFIG=local
-BASE_API=https://api-local
+BASE_URL=/123456789
+VUE_APP_API=https://api-test
