--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,5 @@
-VUE_APP_TITLE=My App
+VUE_APP_NAME=My App
 NODE_ENV=production
-BASE_URL=/
-VUE_APP_A=a
-ENV_CONFIG=prod
-BASE_API=https://api-prod
+ENV_CONFIG=production
+BASE_URL=/123456789
+VUE_APP_API=https://api-prod
