--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-VUE_APP_TITLE=My App
+VUE_APP_NAME=My App
 NODE_ENV=production
-BASE_URL=/
-VUE_APP_A=a
-NODE_ENV=base
-ENV_CONFIG=start
-BASE_API=https://api-prod
-VUE_APP_B=b
+ENV_CONFIG=production
+BASE_URL=/123456789
+VUE_APP_API=https://api-prod
+
