--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ NODE_ENV=production
 ENV_CONFIG=production
 BASE_URL=/123456789
 VUE_APP_API=https://api-prod
+VUE_APP_API_XXX=https://api-prod-xxx
 
