--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ ENV_CONFIG=production
 BASE_URL=/123456789
 VUE_APP_API=https://api-prod
 VUE_APP_API_XXX=https://api-prod-xxx
+VUE_APP_API_STYLES=null
 
